# rsi-events

./: Dockerfile  docker-compose.yml  nginx.conf
backend/: .gitignore  Events.sln
backend/Events.Api/: Dockerfile  Events.Api.csproj  Program.cs  appsettings.json  example.appsettings.json
backend/Events.Application/: DependencyInjection.cs  EventService.cs  Events.Application.csproj  IUnitOfWork.cs
backend/Events.Domain/: DependencyInjection.cs  Events.Domain.csproj
backend/Events.Pdf/: DependencyInjection.cs  Events.Pdf.csproj  PdfEventService.cs
backend/Events.Persistence/: DependencyInjection.cs  EventRepository.cs  Events.Persistence.csproj  UnitOfWork.cs
backend/Events.Persistence.EntityFramework.Psql/: DependencyInjection.cs  Events.Persistence.EntityFramework.Psql.csproj  EventsDbContext.cs
backend/Events.Persistence.Linq2db/: DbContext.cs  DependencyInjection.cs  Events.Persistence.Linq2db.csproj
backend/Events.Persistence.Memory/: DependencyInjection.cs  EventRepository.cs  Events.Persistence.Memory.csproj  UnitOfWork.cs
backend/Events.Presentation/: DependencyInjection.cs  Events.Presentation.csproj
backend/Events.Publisher/: Events.Publisher.csproj  INotification.cs  (+1 more)
backend/Events.Publisher.Rabbit/: DependencyInjection.cs  Events.Publisher.Rabbit.csproj  RabbitPublisher.cs
statistics/: Cargo.toml  Dockerfile
yew-front/: Cargo.toml  Dockerfile  Trunk.toml  index.html
yew-front/src/: create.rs  delete.rs  edit.rs  home.rs  main.rs
yew-front/src/api/: event_service.rs
yew-front/src/components/: event_creator.rs  event_list.rs  mod.rs
(+27 files in other folders)
