[package]
name = "yew-front"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.5.0"
gloo-console = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.92"
yew-router = { git = "https://github.com/yewstack/yew.git" }
web-sys = "0.3.69"
serde_json = "1.0.117"
